Deeve ser assim
heelo

--- a/ficha3exe1.html
+++ b/ficha3exe1.html
@@ -13,7 +13,18 @@ Ex: No caso dos Simpson:
 console.log(quote(“bart”)) // “Ay Caramba!”
 console.log(quote(“homer”)) //"D'oh!!!" 
   
-        
+    -->    
     </head>
+
+    <script type="Javascript">
+    function quote(phrase) {
+        switch (phrase) {
+        case "bart": return "Ay Caramba!"; break;
+        case "homer": return "D'oh!!!!"; break;
+        default: return "";
+        }
+    }
+    
+    </script>
 
 </html>
